# feup-DA-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Classes/: Data.cpp  Data.h  DeliverySite.cpp  DeliverySite.h  DeliverySites.cpp  DeliverySites.h  Graph.h  Menu.cpp  Menu.h  PumpingStation.cpp  PumpingStation.h  WaterReservoir.cpp  WaterReservoir.h  WaterSupplyManager.cpp  WaterSupplyManager.h
dataset/Madeira/: Stations_Madeira.csv
docs/: DA-apresentação.pptx  Doxyfile
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _data_8cpp.html  _data_8h.html  _data_8h_source.html  _delivery_site_8cpp.html  _delivery_site_8h.html  _delivery_site_8h_source.html  _graph_8h.html  _graph_8h_source.html  _menu_8cpp.html  _menu_8h.html  _menu_8h_source.html  _pumping_station_8cpp.html  _pumping_station_8h.html  _pumping_station_8h_source.html  _r_e_a_d_m_e_8md.html  _water_reservoir_8cpp.html  _water_reservoir_8h.html  _water_reservoir_8h_source.html  _water_supply_manager_8cpp.html  _water_supply_manager_8h.html  _water_supply_manager_8h_source.html  annotated.html  class_data-members.html  class_data.html  class_delivery_site-members.html  class_delivery_site.html  class_edge-members.html  class_edge.html  class_graph-members.html  class_graph.html  class_menu-members.html  class_menu.html  class_pumping_station-members.html  class_pumping_station.html  class_vertex-members.html  class_vertex.html  class_water_reservoir-members.html  class_water_reservoir.html  (+32 more)
docs/latex/: _data_8cpp.tex  _data_8h.tex  _data_8h_source.tex  _delivery_site_8cpp.tex  (+31 more)
(+39 files in other folders)
